LabAssignmentdocker/bookApp/bookApp-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: qa
---
apiVersion: v1
kind: Namespace
metadata:
  name: dev
