LabAssignmentdocker/bookApp/bookApp-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: bookapp-pod
  labels:
    app: bookapp
spec:
  containers:
    - name: bookapp-container
      image: vidhuls/bookApp:latest
      ports:
        - containerPort: 8080
