LabAssignmentdocker/bookApp/bookApp-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookApp-ingress
  annotations:
    kubernetes.io/ingress.class: "contour"
spec:
  rules:
    - host: bookApp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bookApp-service
                port:
                  number: 80
